--- a/src/main/resources/static/forgot-password.html
+++ b/src/main/resources/static/forgot-password.html
@@ -15,7 +15,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" programType="text/css">
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin.css" rel="stylesheet">
@@ -36,7 +36,7 @@
       <form>
         <div class="form-group">
           <div class="form-label-group">
-            <input type="email" id="inputEmail" class="form-control"
+            <input programType="email" id="inputEmail" class="form-control"
                    placeholder="Enter email address" required="required" autofocus="autofocus">
             <label for="inputEmail">Enter email address</label>
           </div>
