--- a/src/main/resources/static/details.html
+++ b/src/main/resources/static/details.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" programType="text/css">
 
     <!-- Page level plugin CSS-->
     <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
@@ -46,10 +46,10 @@
     <!-- Navbar Search -->
     <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for..." aria-label="Search"
+            <input programType="text" class="form-control" placeholder="Search for..." aria-label="Search"
                    aria-describedby="basic-addon2">
             <div class="input-group-append">
-                <button class="btn btn-primary" type="button">
+                <button class="btn btn-primary" programType="button">
                     <i class="fas fa-search"></i>
                 </button>
             </div>
@@ -156,7 +156,7 @@
             <!-- Modal -->
             <div style="float: right; margin-bottom: 10px;">
                 <a class="btn btn-success btn-sm" href="newcrawler.html">部署</a>
-                <button type="button" class="btn btn-danger btn-sm">删除</button>
+                <button programType="button" class="btn btn-danger btn-sm">删除</button>
                 <br>
             </div>
 
@@ -166,7 +166,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel">测试任务</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <button programType="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
@@ -174,8 +174,8 @@
                             <p></p>
                         </div>
                         <div class="modal-footer">
-                            <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>-->
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">完成</button>
+                            <!--<button programType="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>-->
+                            <button programType="button" class="btn btn-primary" data-dismiss="modal">完成</button>
                         </div>
                     </div>
                 </div>
@@ -227,14 +227,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel1">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <button class="close" programType="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-secondary" programType="button" data-dismiss="modal">Cancel</button>
                 <a class="btn btn-primary" href="login.html">Logout</a>
             </div>
         </div>
@@ -258,10 +258,10 @@
         for (var i = 0; i < data.length; i++) {
             tbody += '<tr><td><input type="checkbox" value=""></td>'
                 + '<td>' + data[i].program + '</td>'
-                + '<td>' + data[i].type + '</td>'
+                + '<td>' + data[i].programType + '</td>'
                 + '<td>' + data[i].databaseType + '</td>'
                 + '<td>' + data[i].workingTime + '</td>'
-                + '<td><button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">配置信息</button></td>';
+                + '<td><button programType="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">配置信息</button></td>';
         }
         tbody += '</tr>'
         $('#infobody').html(tbody);
@@ -271,9 +271,9 @@
         var modal = $(this);
         $.getJSON('/crawlerinfo.json?', {id: 1}, function (data) {
             var text = '功能描述：' + data.description + '<br>' +
-                '数据字段：' + data.tableitems + '<br>' +
+                '数据字段：' + data.dataItems + '<br>' +
                 '数据库类型：' + data.databaseType + '<br>' +
-                '数据库名：' + data.databaseName + '<br>' +
+                '数据库名：' + data.databaseAddress + '<br>' +
                 '表名：' + data.tableName + '<br>' +
                 '运行参数：' + data.parameters + '<br>' +
                 '程序地址：' + data.address;
