--- a/src/main/resources/static/newjob.html
+++ b/src/main/resources/static/newjob.html
@@ -15,7 +15,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" programType="text/css">
 
   <!-- Page level plugin CSS-->
   <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
@@ -38,10 +38,10 @@
   <!-- Navbar Search -->
   <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for..." aria-label="Search"
+      <input programType="text" class="form-control" placeholder="Search for..." aria-label="Search"
              aria-describedby="basic-addon2">
       <div class="input-group-append">
-        <button class="btn btn-primary" type="button">
+        <button class="btn btn-primary" programType="button">
           <i class="fas fa-search"></i>
         </button>
       </div>
@@ -160,46 +160,46 @@
               <option value="2">Two</option>
               <option value="3">Three</option>
             </select>
-            <!--<input type="email" class="form-control" id="inputEmail3" placeholder="程序名">-->
+            <!--<input programType="email" class="form-control" id="inputEmail3" placeholder="程序名">-->
           </div>
         </div>
         <div class="form-group row">
           <label for="databaseAddress" class="col-sm-2 col-form-label">数据库地址</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="databaseAddress"
+            <input programType="password" class="form-control" id="databaseAddress"
                    placeholder="database address">
           </div>
         </div>
         <div class="form-group row">
           <label for="databasePassword" class="col-sm-2 col-form-label">数据库密码</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="databasePassword"
+            <input programType="password" class="form-control" id="databasePassword"
                    placeholder="database password">
           </div>
         </div>
         <div class="form-group row">
           <label for="tableName" class="col-sm-2 col-form-label">数据表名</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="tableName" placeholder="tableName">
+            <input programType="password" class="form-control" id="tableName" placeholder="tableName">
           </div>
         </div>
         <div class="form-group row">
           <label for="dataItems" class="col-sm-2 col-form-label">数据字段</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="dataItems"
+            <input programType="password" class="form-control" id="dataItems"
                    placeholder="database password">
           </div>
         </div>
         <div class="form-group row">
           <label for="expression" class="col-sm-2 col-form-label">表达式</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="expression"
+            <input programType="password" class="form-control" id="expression"
                    placeholder="database password">
           </div>
         </div>
         <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-success">部署</button>
+            <button programType="submit" class="btn btn-success">部署</button>
           </div>
         </div>
       </form>
@@ -235,14 +235,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <button class="close" programType="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
       <div class="modal-body">Select "Logout" below if you are ready to end your current session.
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <button class="btn btn-secondary" programType="button" data-dismiss="modal">Cancel</button>
         <a class="btn btn-primary" href="login.html">Logout</a>
       </div>
     </div>
