--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" programType="text/css">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
@@ -33,13 +33,13 @@
               <div class="form-row">
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
+                    <input programType="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
                     <label for="firstName">First name</label>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="text" id="lastName" class="form-control" placeholder="Last name" required="required">
+                    <input programType="text" id="lastName" class="form-control" placeholder="Last name" required="required">
                     <label for="lastName">Last name</label>
                   </div>
                 </div>
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
+                <input programType="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
                 <label for="inputEmail">Email address</label>
               </div>
             </div>
@@ -55,13 +55,13 @@
               <div class="form-row">
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
+                    <input programType="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
                     <label for="inputPassword">Password</label>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
+                    <input programType="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
                     <label for="confirmPassword">Confirm password</label>
                   </div>
                 </div>
