new file:   file/infotable         new file:   file/programinfo         modified:   pom.xml         modified:   src/main/java/com/example/cc/CcApplication.java         modified:   src/main/java/com/example/cc/models/CrawlerInfo.java         modified:   src/main/java/com/example/cc/models/SimpleInfo.java         modified:   src/main/resources/static/newcrawler.html

--- a/src/main/resources/static/newcrawler.html
+++ b/src/main/resources/static/newcrawler.html
@@ -299,7 +299,7 @@
     console.log(data1);
     $.ajax({
       url: '/newcrawlersubmit?' + data1,
-      programType: 'POST',
+      type: 'POST',
       success: function (response) {
       }
     });
