--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" programType="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
@@ -31,20 +31,20 @@
           <form>
             <div class="form-group">
               <div class="form-label-group">
-                <input programType="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
                 <label for="inputEmail">用户名</label>
               </div>
             </div>
             <div class="form-group">
               <div class="form-label-group">
-                <input programType="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
                 <label for="inputPassword">密码</label>
               </div>
             </div>
             <div class="form-group">
               <div class="checkbox">
                 <label>
-                  <input programType="checkbox" value="remember-me">
+                  <input type="checkbox" value="remember-me">
                   记住密码
                 </label>
               </div>
